feat: add watcher script

--- a/components/header.html
+++ b/components/header.html
@@ -1,3 +1,6 @@
 <header>
-  <p>this is a header</p>
+  <div class="logo"></div>
+  <div class="blogName">
+    <h2><a href="/">Kamublog</a></h2>
+  </div>
 </header>
