feat: use showdown-highlight

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,3 +1,7 @@
 <footer>
-  <p>Made wit HATE by <a href="https://github.com/kamuridesu">Kamuridesu</a></p>
+    <hr />
+    <p>
+        Made with <strong>HATE</strong> by
+        <a href="https://github.com/kamuridesu">Kamuridesu</a>;;;
+    </p>
 </footer>
