--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,7 @@
 <header>
   <div class="logo"></div>
   <div class="blogName">
-    <h2><a href="/">Kamublog</a></h2>
+    <p><a href="/">Kamuri's simple blog</a></p>
   </div>
+  <hr />
 </header>
